servas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servas
spec:
  selector:
    app: servas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
