servas/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servas-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: servas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servas
                port:
                  number: 80
